--- a/estilo/style.css
+++ b/estilo/style.css
@@ -227,6 +227,13 @@
         width: 30%;
       }
 
+      .jogo{
+    
+        box-sizing: content-box;
+ 
+      
+      }
+
 
   }
   /*movimento*/
